QUIZ email and report with load balancers
