# internal/handler/pdf_handler.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"fmt"
 	"log"
 	"net/http"
 	"strconv"
@@ -18,40 +19,36 @@ func NewPDFHandler(s *service.PDFService) *PDFHandler {
 	return &PDFHandler{service: s}
 }
 
+// GenerateReportHandler now takes a session ID.
 func (h *PDFHandler) GenerateReportHandler(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	idStr, ok := vars["id"]
 	if !ok {
-		models.RespondWithError(w, http.StatusBadRequest, "User ID is missing")
+		models.RespondWithError(w, http.StatusBadRequest, "Session ID is missing")
 		return
 	}
 
 	id, err := strconv.Atoi(idStr)
 	if err != nil {
-		models.RespondWithError(w, http.StatusBadRequest, "Invalid User ID format")
+		models.RespondWithError(w, http.StatusBadRequest, "Invalid Session ID format")
 		return
 	}
 
-	log.Printf("Received request to generate report for user ID: %d", id)
+	log.Printf("Received request to generate report for session ID: %d", id)
 
-	pdfBytes, err := h.service.GenerateUserReport(id)
+	pdfBytes, err := h.service.GenerateQuizReport(id)
 	if err != nil {
-		if err.Error() == "user with ID "+idStr+" not found" {
+		if err.Error() == fmt.Sprintf("session with ID %d not found", id) {
 			models.RespondWithError(w, http.StatusNotFound, err.Error())
 		} else {
 			models.RespondWithError(w, http.StatusInternalServerError, "Failed to generate PDF report")
 		}
-		log.Printf("Error generating report for user ID %d: %v", id, err)
+		log.Printf("Error generating report for session ID %d: %v", id, err)
 		return
 	}
 
 	w.Header().Set("Content-Type", "application/pdf")
-	w.Header().Set("Content-Disposition", "attachment; filename=user_report_"+idStr+".pdf")
+	w.Header().Set("Content-Disposition", "attachment; filename=quiz_report_session_"+idStr+".pdf")
 	w.WriteHeader(http.StatusOK)
-
-	_, err = w.Write(pdfBytes)
-	if err != nil {
-		log.Printf("Failed to write PDF response for user ID %d: %v", id, err)
-	}
-	log.Printf("Successfully sent PDF report for user ID: %d", id)
+	w.Write(pdfBytes)
 }
