# internal/models/quiz_attempt.go
@@ -1,0 +1,6 @@
+package models
+
+type QuizAttempt struct {
+	ChosenOption string `db:"chosen_option"`
+	Question     *Question
+}
